syntax = "proto3";
package mdsc.metastore.v1;

option go_package = "mdsc/x/metastore/types";

// gogoprotoをインポート (ファイルの先頭付近に追加)
import "gogoproto/gogo.proto";

// 1. 最下層: データの断片の保存場所情報
message FragmentLocation {
  // jsontagを使って明示的に名前を指定し、omitemptyを排除する
  string fdsc_id = 1 [(gogoproto.jsontag) = "fdsc_id"]; 
  string fragment_id = 2 [(gogoproto.jsontag) = "fragment_id"];
}

// 2. 中間層: ファイル単位の情報
message FileInfo {
  string mime_type = 1 [(gogoproto.jsontag) = "mime_type"];
  // 修正: size -> file_size
  uint64 file_size = 2 [(gogoproto.jsontag) = "file_size"];
  // ファイルを構成するフラグメントのリスト
  repeated FragmentLocation fragments = 3 [(gogoproto.jsontag) = "fragments"];
}

// 3. 最上位: マニフェスト本体
message Manifest {
  string project_name = 1;
  string version = 2;
  string creator = 3;
  // ファイルパスをキーとしたMap構造
  map<string, FileInfo> files = 4 [(gogoproto.jsontag) = "files"]; 
}